--- a/file-creator/src/App.css
+++ b/file-creator/src/App.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #101010;
+}
+
+.show{
+  animation: show 4.5s;
+}
+
+@keyframes show {
+  0%{
+    top: -176px
+  }
+  20%{
+    top: 100px
+  }
+  80%{
+    top: 100px
+  }
+  100%{
+    top: -176px
+  }
+}
